<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Торговый агент</string>
    <string name="activity_settings_name">Настройки</string>

    <string name="settings_ftp_group_name">Настройки FTP сервера</string>
    <string name="settings_ftp_caption_server">Сервер</string>
    <string name="settings_ftp_caption_port">Порт</string>
    <string name="settings_ftp_caption_login">Логин</string>
    <string name="settings_ftp_caption_password">Пароль</string>
    <string name="settings_button_save">Сохранить</string>
    <string name="settings_use_passive_mode">Использовать пасивный режим</string>

    <string name="question_save_settings">Сохранить настройки?</string>
</resources>
