<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/settings_group_ftp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/settings_group_background">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/settings_ftp_group_name"
                    android:id="@+id/textView"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:weightSum="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/settings_ftp_caption_server"
                    android:id="@+id/settings_caption_server"/>
                <EditText
                    android:layout_width="132dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_edit_text_server"
                    android:layout_weight="0.39"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/settings_ftp_caption_port"
                    android:id="@+id/settings_caption_port"/>
                <EditText
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_edit_text_port"
                    android:inputType="number"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/settings_ftp_caption_login"
                    android:id="@+id/settings_caption_login"/>
                <EditText
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_edit_text_login"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/settings_ftp_caption_password"
                    android:id="@+id/settings_caption_password"/>
                <EditText
                    android:layout_width="272dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_edit_text_password"
                    android:inputType="textPassword"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>